--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@chakra-ui/react": "^2.5.1",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@esbuild/darwin-arm64": "^0.17.14",
     "axios": "^1.3.4",
     "framer-motion": "^10.3.4",
     "react": "^18.2.0",
@@ -21,11 +22,13 @@
     "react-router-dom": "^6.9.0"
   },
   "devDependencies": {
+    "@types/node": "^18.15.11",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
+    "dotenv": "^16.0.3",
     "sass": "^1.59.3",
     "typescript": "^4.9.3",
-    "vite": "^4.2.0"
+    "vite": "^4.2.1"
   }
 }
