--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "axios": "^1.3.4",
+    "chakra-ui-autocomplete": "^1.4.5",
     "framer-motion": "^10.3.4",
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.43",
@@ -23,12 +24,14 @@
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
-    "react-router-dom": "^6.9.0"
+    "react-router-dom": "^6.9.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/node": "^18.15.11",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "@types/uuid": "^9.0.2",
     "@vitejs/plugin-react": "^3.1.0",
     "dotenv": "^16.0.3",
     "sass": "^1.59.3",
