--- a/package.json
+++ b/package.json
@@ -15,12 +15,11 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "axios": "^1.3.4",
-    "chakra-ui-autocomplete": "^1.4.5",
     "framer-motion": "^10.3.4",
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.43",
     "react": "^18.2.0",
-    "react-auth-kit": "^2.12.2",
+    "react-auth-kit": "^2.12.3",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
@@ -33,9 +32,12 @@
     "@types/react-dom": "^18.0.10",
     "@types/uuid": "^9.0.2",
     "@vitejs/plugin-react": "^3.1.0",
+    "autoprefixer": "^10.4.14",
     "dotenv": "^16.0.3",
+    "postcss": "^8.4.24",
     "sass": "^1.59.3",
+    "tailwindcss": "^3.3.2",
     "typescript": "^4.9.3",
-    "vite": "^4.2.1"
+    "vite": "^4.3.9"
   }
 }
