--- a/package.json
+++ b/package.json
@@ -24,17 +24,20 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.9.0",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "validator": "^13.9.0"
   },
   "devDependencies": {
     "@types/node": "^18.15.11",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@types/uuid": "^9.0.2",
+    "@types/validator": "^13.7.17",
     "@vitejs/plugin-react": "^3.1.0",
     "autoprefixer": "^10.4.14",
     "dotenv": "^16.0.3",
     "postcss": "^8.4.24",
+    "prettier": "^3.0.0",
     "sass": "^1.59.3",
     "tailwindcss": "^3.3.2",
     "typescript": "^4.9.3",
