--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@chakra-ui/stepper": "^2.1.0",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@stripe/react-stripe-js": "^2.1.1",
+    "@stripe/stripe-js": "^1.54.1",
     "axios": "^1.3.4",
     "framer-motion": "^10.3.4",
     "moment": "^2.29.4",
