--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "framer-motion": "^10.3.4",
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.43",
+    "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-auth-kit": "^2.12.3",
     "react-cookie": "^4.1.1",
