--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@stripe/stripe-js": "^1.54.1",
     "axios": "^1.3.4",
     "framer-motion": "^10.3.4",
+    "jotai": "^2.2.2",
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.43",
     "qrcode.react": "^3.1.0",
