--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,9 @@
 {
+    "semi": true,
     "singleQuote": true,
-    "trailingComma": "all",
-    "printWidth": 80
+    "trailingComma": "none",
+    "arrowParens": "avoid",
+    "printWidth": 100,
+    "tabWidth": 2,
+    "useTabs": false
 }
